[gd_scene load_steps=36 format=3 uid="uid://dogexqnmt3c4c"]

[ext_resource type="Texture2D" uid="uid://ryawj5boo8i3" path="res://images/background.jpg" id="1_3qppl"]
[ext_resource type="Script" path="res://node_2d.gd" id="1_bg2co"]
[ext_resource type="Texture2D" uid="uid://bfry6agsk8ext" path="res://images/Move.png" id="2_raed3"]
[ext_resource type="Texture2D" uid="uid://cuv5ylurjrvrw" path="res://images/Fighter/Destroyed.png" id="3_qo7yd"]
[ext_resource type="Script" path="res://animated_sprite_2d.gd" id="4_aok48"]
[ext_resource type="Texture2D" uid="uid://dkqudht4esskk" path="res://images/Fighter/Turn_2.png" id="4_dmfwl"]
[ext_resource type="Texture2D" uid="uid://xi3k7ceby8sa" path="res://images/Fighter/Turn_1.png" id="4_vcvvy"]
[ext_resource type="AudioStream" uid="uid://ctpfxupk0h6i7" path="res://sounds/laserShot.wav" id="8_qrpk4"]
[ext_resource type="AudioStream" uid="uid://cjux3kwha1nsj" path="res://sounds/rockSmash.wav" id="9_evj1e"]
[ext_resource type="AudioStream" uid="uid://cn5jdvhdmrj2x" path="res://sounds/PlayerDie.wav" id="10_tpn5g"]
[ext_resource type="Script" path="res://button.gd" id="11_088hv"]
[ext_resource type="Script" path="res://counter.gd" id="12_r6nsa"]
[ext_resource type="PackedScene" uid="uid://cqk6rnphsaqyd" path="res://objects/joystick.tscn" id="13_guwoh"]
[ext_resource type="Script" path="res://touch_screen_button.gd" id="14_0oara"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b70co"]
atlas = ExtResource("3_qo7yd")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx08k"]
atlas = ExtResource("3_qo7yd")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ssm"]
atlas = ExtResource("3_qo7yd")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c534b"]
atlas = ExtResource("3_qo7yd")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhdc5"]
atlas = ExtResource("3_qo7yd")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fasca"]
atlas = ExtResource("3_qo7yd")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4tu4"]
atlas = ExtResource("3_qo7yd")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc2ix"]
atlas = ExtResource("3_qo7yd")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xij6a"]
atlas = ExtResource("3_qo7yd")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w8s7"]
atlas = ExtResource("2_raed3")
region = Rect2(0, 144, 288, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_43rrb"]
atlas = ExtResource("2_raed3")
region = Rect2(0, 0, 188, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_58hc1"]
atlas = ExtResource("2_raed3")
region = Rect2(192, 0, 188, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uph0"]
atlas = ExtResource("2_raed3")
region = Rect2(384, 0, 188, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5v0v"]
atlas = ExtResource("2_raed3")
region = Rect2(576, 0, 188, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pokv"]
atlas = ExtResource("2_raed3")
region = Rect2(768, 0, 188, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdj88"]
atlas = ExtResource("2_raed3")
region = Rect2(960, 0, 188, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6grj"]
atlas = ExtResource("4_dmfwl")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mseoy"]
atlas = ExtResource("4_vcvvy")
region = Rect2(182, 0, 182, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_b515j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b70co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx08k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ssm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c534b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhdc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fasca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4tu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc2ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xij6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w8s7")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43rrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58hc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uph0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5v0v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pokv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdj88")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6grj")
}],
"loop": false,
"name": &"moveLeft",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mseoy")
}],
"loop": false,
"name": &"moveRight",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcv4e"]
size = Vector2(53, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t705w"]

[node name="Root" type="Node2D"]
script = ExtResource("1_bg2co")

[node name="SpaceBackground" type="TextureRect" parent="."]
offset_right = 600.0
offset_bottom = 699.0
texture = ExtResource("1_3qppl")

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(300, 647)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_b515j")
animation = &"idle"
script = ExtResource("4_aok48")

[node name="Area2D2" type="Area2D" parent="Player"]
visible = false
position = Vector2(647.001, -299.998)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D2"]
visible = false
position = Vector2(302.5, 633)
shape = SubResource("RectangleShape2D_pcv4e")

[node name="shoot_delay" type="Timer" parent="Player"]
process_callback = 0
wait_time = 0.4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
stream = ExtResource("8_qrpk4")
volume_db = -5.954

[node name="HarderTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Rocksmash" type="AudioStreamPlayer2D" parent="."]
position = Vector2(333, -22)
stream = ExtResource("9_evj1e")
volume_db = 5.333

[node name="PlayerDie" type="AudioStreamPlayer2D" parent="."]
position = Vector2(264, -41)
stream = ExtResource("10_tpn5g")
volume_db = 4.0
pitch_scale = 2.0

[node name="Counter" type="RichTextLabel" parent="."]
offset_left = 41.0
offset_top = 16.0
offset_right = 171.0
offset_bottom = 42.0
text = "Score: 0"
script = ExtResource("12_r6nsa")

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
offset_left = 157.0
offset_top = 201.0
offset_right = 454.0
offset_bottom = 491.0

[node name="Button" type="Button" parent="GameOverPanel"]
modulate = Color(0.970946, 1.1792e-06, 1.15514e-06, 1)
self_modulate = Color(1, 0.202875, 0.354615, 1)
layout_mode = 0
offset_left = 62.0
offset_top = 172.0
offset_right = 237.0
offset_bottom = 255.0
theme_override_font_sizes/font_size = 35
text = "Restart
"
script = ExtResource("11_088hv")

[node name="Label" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 80.0
offset_right = 298.0
offset_bottom = 119.0
text = "your highest record is x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewRecord" type="Label" parent="GameOverPanel"]
visible = false
modulate = Color(1, 1, 0, 1)
layout_mode = 0
offset_left = 105.0
offset_top = 10.0
offset_right = 203.0
offset_bottom = 38.0
text = "New Record!"

[node name="RecordNumber" type="Label" parent="GameOverPanel"]
layout_mode = 0
offset_left = 135.0
offset_top = 43.0
offset_right = 175.0
offset_bottom = 66.0
text = "0000"
horizontal_alignment = 1

[node name="Joystick" parent="." instance=ExtResource("13_guwoh")]
visible = false
top_level = true
position = Vector2(468, 568)

[node name="TouchScreen" type="TouchScreenButton" parent="."]
position = Vector2(299, 350)
scale = Vector2(35, 35)
shape = SubResource("RectangleShape2D_t705w")
script = ExtResource("14_0oara")

[connection signal="area_entered" from="Player/Area2D2" to="Player" method="_on_area_2d_2_area_entered"]
[connection signal="timeout" from="Player/shoot_delay" to="Player" method="_on_shoot_delay_timeout"]
[connection signal="timeout" from="HarderTimer" to="." method="_on_harder_timeout"]
[connection signal="pressed" from="GameOverPanel/Button" to="GameOverPanel/Button" method="_on_pressed"]
[connection signal="pressed" from="TouchScreen" to="TouchScreen" method="_on_pressed"]
[connection signal="released" from="TouchScreen" to="TouchScreen" method="_on_released"]
